# db-code-medium

./: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
src-rs/: Cargo.toml  build.sh
src-rs/src/: helpers.rs  lib.old.rs  lib.rs
src-rs/src/compilers/: mongoose.rs  type_orm.rs
src-rs/src/utils/: helpers.rs
src/app/: globals.css  layout.tsx
src/app/(main)/: layout.tsx  page.tsx  view.tsx
src/app/(main)/[[...id]]/: page.tsx  view.tsx
src/app/(main)/dashboard/: page.tsx
src/app/(main)/project/[[...id]]/: view.tsx
src/app/api/validate/: route.ts
src/app/test/: page.tsx  view.tsx
src/components/editors/: code-editor.tsx  code-editor.v2.tsx  column-editor.tsx  flow-editor.tsx  flow-menu.tsx  index.tsx  join-editor.tsx
src/components/editors/flow-menu/: image-export.tsx  index.tsx
src/components/flow-nodes/: table-node.tsx
src/components/flow-nodes/edges/: arrow-heads.tsx  self-connecting.tsx
src/components/navbar/: index.tsx
src/components/react-flow-custom/: column-editor.tsx  join-editor.tsx  table-node.tsx
src/components/shared/buttons/: button.tsx  icon-button.tsx
src/components/shared/icons/: index.tsx
src/components/shared/inputs/: index.tsx
src/components/shared/modals/: index.tsx
src/lib/: constants.ts  utils.ts
src/lib/context/: app-context.tsx  editor-context.tsx
src/lib/flow-editors/: helpers.ts  nodes.ts
src/lib/types/: database-types.ts
src/pkg/: package.json  src_rs.d.ts  src_rs.js  src_rs_bg.wasm  src_rs_bg.wasm.d.ts
src/utils/: constants.ts  helpers.ts
src/utils/types/: database-types.ts
