[package]
name = "src-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.135"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
regex = "1"
nanoid = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "db-code-compiler"
path = "src/lib.rs"  # Specify the file you want to run
